--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Metronic React Demo 1" />
+  <meta name="description" content="Portal de Facturación Electrónica Jadal System" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700">
   <title>Portal de Facturación Electrónica Jadal System</title>
-  <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/jadal.ico" />
   <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/splash-screen.css" />
 </head>
 
@@ -36,8 +36,9 @@
 
   <div id="root"></div>
   <div id="splash-screen" class="splash-screen">
-    <img src="%PUBLIC_URL%/media/logos/default-small.svg" alt="Metronic logo" />
-    <span>Loading ...</span>
+    <!-- <img src="%PUBLIC_URL%/media/logos/default-small.svg" alt="Metronic logo" /> -->
+    <img src="%PUBLIC_URL%/media/logos/jadal-load.png" alt="Jadal FE logo" />
+    <span>Cargando ...</span>
   </div>
   <div id="root-modals"></div>
 </body>
